--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,27 @@
 repos:
-    - repo: local
+    - repo: https://github.com/AlexisFetet/conda_pre_commit
+      rev: fde323bd03092581fbd8295f5445cd125320a35d
       hooks:
-      - id: run-pre-commit-check
-        name: run-pre-commit-check
-        entry: bash pre_commit_check.sh
-        language: system
-        require_serial: True
-        verbose: True
+      - id: conda-pycln
+        args:
+          - -a 
+          - -s
+      - id: conda-isort
+      - id: conda-autopep8
+        args:
+          - --in-place 
+          - --global-config=.flake8 
+          - --max-line-length=79 
+          - -a 
+          - -a 
+          - -r
+      - id: conda-pylint
+        additional_dependencies:
+          - -c
+          - conda-forge
+          - python=3.8.5
+          - python-dotenv=0.21.0
+          - requests=2.28.1
+        args:
+          - -s=no
+        
