--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,41 +1,10 @@
 repos:
     - repo: local
       hooks:
-        - id: conda-pycln
-          name: pycln
-          entry: pycln
-          language: conda
-          types:
-            - python
-
-        - id: conda-isort
-          name: isort
-          entry: isort
-          language: conda
-          types:
-            - python
-
-        - id: conda-autopep8
-          name: autopep8
-          entry: autopep8
-          language: conda
-          types:
-            - python
-          args:
-            - --in-place 
-            - --global-config=.flake8 
-            - --max-line-length=79 
-            - -a 
-            - -a 
-            - -r
-
-        - id: conda-pylint
-          name: pylint
-          entry: pylint
-          language: conda
-          types:
-            - python
-          args:
-            - -s=no
-            - --max-line-length=79
+        - id: pre-commit
+          name: pre-commit
+          entry: bash pre_commit.sh
+          language: system
+          verbose: true
+          require_serial: true
         
