--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,20 @@
 repos:
-    - repo: local
-      hooks:
-        - id: pre-commit
-          name: pre-commit
-          entry: bash pre_commit.sh
-          language: system
-          verbose: true
-          require_serial: true
+  - repo: https://github.com/hadialqattan/pycln
+    rev: 'v2.1.1'
+    hooks:
+      - id: pycln
+        args: [--config=pyproject.toml]
+
+  - repo: https://github.com/pre-commit/mirrors-isort
+    rev: v5.10.1
+    hooks:
+      - id: isort
+        files: "\\.(py)$"
+        args: [--settings-path=pyproject.toml]
+
+  - repo: https://github.com/pre-commit/mirrors-autopep8
+    rev: v2.0.0 
+    hooks:
+      - id: autopep8
+        args: [--global-config=pyproject.toml]
         
