--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,10 @@
 repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.3.0  # Use the ref you want to point at
+    hooks:
+    - id: trailing-whitespace
+    - id: check-docstring-first
+
   - repo: https://github.com/hadialqattan/pycln
     rev: 'v2.1.1'
     hooks:
@@ -13,8 +19,7 @@ repos:
         args: [--settings-path=pyproject.toml]
 
   - repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: v2.0.0 
+    rev: v2.0.0
     hooks:
       - id: autopep8
         args: [--global-config=pyproject.toml]
-        
